--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <section class="container">
+    <section>
     <header>
         <img src="img/logo.svg" alt="tourizm">
         <nav>
@@ -20,6 +20,13 @@
             </ul>
         </nav>
     </header>
+    </section>
+    <section class="container">
+        <img src="/img/banner.svg" alt="banner">
+        <div class="text">
+            <h3>Discover Greece</h3>
+            <h6>TRAVEL WITH UNIQUE EXPERIENCE</h6>
+        </div>
     </section>
 </body>
 </html>
