--- a/index.html
+++ b/index.html
@@ -28,5 +28,50 @@
             <h6>TRAVEL WITH UNIQUE EXPERIENCE</h6>
         </div>
     </section>
+    <section class="container2">
+        <div class="discover">  
+          <p>DISCOVER</p>
+          <h2>Our Hot Services</h2>
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
+        </div>
+        <div class="boxes">
+            <div class="box">
+                <div class="box1">
+                    <div class="box">
+                        <img src="img/Rectangle 4.svg" alt="plan">
+                        <h4>FLIGHT BOOKING</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
+                    </div>
+                    <div class="box">
+                        <img src="img/Rectangle 4 copy.svg" alt="plan">
+                        <h4>HOTEL & RESORT BOOKING</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
+                    </div>
+                    <div class="box">
+                        <img src="img/Rectangle 4 copy 2.svg" alt="plan">
+                        <h4>FAMILY TRIP PLANNER</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
+                    </div>
+                </div>
+                <div class="box2">
+                    <div class="box">
+                        <img src="img/box21.svg" alt="plan">
+                        <h4>CRUISE TOUR</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
+                    </div>
+                    <div class="box">
+                        <img src="img/box22.svg" alt="plan">
+                        <h4>FIRE CAMP</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
+                    </div>
+                    <div class="box">
+                        <img src="img/box23.svg" alt="plan">
+                        <h4>CORPORATE HOLIDAYS</h4>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem.</p>
+                    </div>
+                </div>
+        </div>
+        
+    </section>
 </body>
 </html>
