--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     </section>
     <section class="container">
-        <img src="/img/banner.svg" alt="banner">
+        <img src="img/banner.svg" alt="banner">
         <div class="text">
             <h3>Discover Greece</h3>
             <h6>TRAVEL WITH UNIQUE EXPERIENCE</h6>
