--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/5bb5274725.js" crossorigin="anonymous"></script>
     <title>Tousrism</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -19,6 +20,7 @@
                 <li>TOUR PACKAGE</li>
             </ul>
         </nav>
+        <i class="fa-solid fa-bars"></i>
     </header>
     </section>
     <section class="container">
